tests/src/frontend/syntax/invalid/public_global_fun.sk
public fun f(): void { void }
